<resources>
    <string name="app_name">FireflyHakanFirat</string>

    <string name="register"><u>Register</u></string>
    <string name="ok">OK</string>

    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="fullName">Full Name</string>
    <string name="lastName">Last Name</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_text">Register</string>
    <string name="or">or</string>
    <string name="user_input_warning">Invalid email or password</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="warning">Warning</string>
    <string name="userList">User List</string>
    <string name="userDetail">User Detail</string>
    <string name="update_success">Update Succesfull</string>
    <string name="delete_success">Delete Succesfull</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>
