<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/login_img"
        android:scaleType="fitXY"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="10dp"
            android:inputType="textEmailAddress"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/BlackButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="15sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</RelativeLayout>